# FrequentEmailSummarizer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
src/frequent_email_summarizer/: __init__.py  __main__.py  date_parser.py  formatter.py  gmail_client.py  main.py  redactor.py  summarizer.py
tests/: __init__.py  test_date_parser.py  test_formatter.py  test_redactor.py  test_summarizer.py
